<resources>
    <string name="app_name">SocialMedia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search...</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="write_a_post">Write a post</string>
    <string name="share">Share</string>
    <string name="post_heading">What\'s on your mind?</string>
    <string name="photos">Photos</string>
    <string name="status">Status</string>
    <string name="gallery">Upload Image</string>
    <string name="sign_up">sign up</string>
    <string name="first_name">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="login_here">Login here</string>
    <string name="post">Post</string>
    <string name="posts">posts</string>
    <string name="edit">Edit</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_up_here">sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="help_and_settings">Help and settings</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="update">update</string>
    <string name="gallary">gallery</string>
    <string name="pscreebname">Name</string>
    <string name="plocation">Faculty</string>
    <string name="pprofession">Course</string>

    <string-array name="spinner_label">
        <item>Female</item>
        <item>Male</item>

    </string-array>
</resources>