<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/profile_image"
                android:text="Bradley Juma" />

            <TextView
                android:id="@+id/faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintLeft_toRightOf="@id/profile_image"
                android:text="FIT" />

            <TextView
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@id/faculty"
                app:layout_constraintLeft_toRightOf="@id/profile_image"
                android:text="ICS" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="ygeyceyvycevcyevycveyvcevcveycvyev
       ycvecvyevycvevcyevcveyceuvcyevcvyevcyevycvevgdvcvdvv
       cyvecyecveycvevcuyevcveyvcyevcveyvcuyevcvvcevycvy
       vc"/>



        <ImageView
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/likes"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:textSize="10sp"
                android:layout_height="wrap_content"
                android:text="20 likes"/>

            <TextView
                android:id="@+id/comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight=".5"
                android:textSize="10sp"
                android:gravity="end"
                android:text="20 comments"/>

        </LinearLayout>

        <View
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:background="#939393"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:orientation="horizontal">

            <Button
                android:id="@+id/like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:textSize="10sp"
                android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                android:text="@string/like"/>

            <Button
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:textSize="10sp"
                android:drawableStart="@drawable/ic_comment"
                android:text="@string/comment"/>

            <Button
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/transparent"
                android:textSize="10sp"
                android:drawableStart="@drawable/ic_baseline_share_24"
                android:text="@string/share"/>

        </LinearLayout>



    </LinearLayout>




</androidx.cardview.widget.CardView>
